--- a/server/public/sass/bulma/sass/elements/content.sass
+++ b/server/public/sass/bulma/sass/elements/content.sass
@@ -15,15 +15,15 @@
   .is-accent
     color: $accent
 
-  // Specifically for footer paragraphs
-  &.is-footer
-    p
-      color: $grey
-      line-height: 1
-      font-size: 1rem
-      margin-top: 10px
-    +mobile
-      text-align: center
+.is-footer
+  p
+    color: $grey
+    line-height: 1
+    font-size: 1rem
+    margin-top: 10px
+  +mobile
+    text-align: center
+
 
   blockquote,
   p,
